# fastapi_zero

./: .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.md  alembic.ini  compose.yaml  makefile  pyproject.toml
fastapi_zero/: app.py  routes.py
fastapi_zero/auth/: controller.py  schema.py  service.py
fastapi_zero/cart/: controller.py  doc.md  model.py  schema.py  service.py
fastapi_zero/categoria/: controller.py  model.py  schema.py  service.py
fastapi_zero/core/: __init__.py  exception.py  models.py  schemas.py  settings.py
fastapi_zero/core/db/: __init__.py  postgresql.py
fastapi_zero/core/repository/: __init__.py
fastapi_zero/core/security/: __init__.py  _exception.py  jwt.py  security.py
fastapi_zero/db/: __init__.py  db.py  postgresql.py
fastapi_zero/pedido/: README.md  controller.py  model.py  schema.py  service.py
fastapi_zero/produto/: controller.py  doc.md  model.py  schema.py  service.py
fastapi_zero/settings/: settings.py
fastapi_zero/user/: README.md  controller.py  docs.md  model.py  schema.py  service.py
migrations/: env.py
migrations/versions/: 140279540d71_created_all_tables_in_the_basic_version.py  67b91768a31c_create_users_table.py  736553da9a7f_created_table_of_addresses_2.py  a6f1aad0d58f_create_users_table.py  e22a11b18f60_created_table_of_addresses.py  e5c5e1899a3c_created_table_of_addresses_3.py  eec0f8265f1b_created_table_of_addresses_4.py
